--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -131,23 +131,23 @@
             </intent-filter>
             -->
         </activity> <!-- 카카오 로그인 화면 뜨는거 -->
-        <activity
-            android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
-            android:exported="true"
-            android:launchMode="singleTask">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+<!--        <activity-->
+<!--            android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"-->
+<!--            android:exported="true"-->
+<!--            android:launchMode="singleTask">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.VIEW" />-->
 
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
+<!--                <category android:name="android.intent.category.DEFAULT" />-->
+<!--                <category android:name="android.intent.category.BROWSABLE" />-->
 
-                <!-- Redirect URI: "kakao${NATIVE_APP_KEY}://oauth" -->
-                <data
-                    android:host="oauth"
-                    android:scheme="@string/kakao_oauth_host"
-                    tools:ignore="AppLinkUrlError" />
-            </intent-filter>
-        </activity>
+<!--                &lt;!&ndash; Redirect URI: "kakao${NATIVE_APP_KEY}://oauth" &ndash;&gt;-->
+<!--&lt;!&ndash;                <data&ndash;&gt;-->
+<!--&lt;!&ndash;                    android:host="oauth"&ndash;&gt;-->
+<!--&lt;!&ndash;                    android:scheme="@string/kakao_oauth_host"&ndash;&gt;-->
+<!--&lt;!&ndash;                    tools:ignore="AppLinkUrlError" />&ndash;&gt;-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
         <activity
             android:name=".review.ReviewPostActivity"
             android:exported="true" />
